sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: '(' expected but identifier found.
    for j <- i to n)
        ^AlgInsertionSort:13: error: illegal start of simple expression
  }
  ^