sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort()
{
  var n = getNombreValeurs();
  var min = 0;
  for (i <- 0 to n)
  {
    for j <- i to n)
    {
      if plusPetit(j,min) min = j;
    }
    echange(i, min);
  }
}